# Copyright 2015 Samsung Electronics Co, Ltd. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

SET(BASE_SRCDIR ${PROJECT_SOURCE_DIR}/src)

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(extension)
ADD_SUBDIRECTORY(bundle)
ADD_SUBDIRECTORY(runtime)
